# cpi

./: .gitignore  CMakeLists.txt  ReadMe.md
cpi_comm/: CMakeLists.txt  LICENSE  package.xml
cpi_comm/msg/: CameraMeasurement.msg  FeatureMeasurement.msg
cpi_compare/: .gitignore  CMakeLists.txt  ReadMe.md  package.xml
cpi_compare/launch/: run_mc.sh  rviz.rviz  synthetic_record.launch  synthetic_test.launch
cpi_compare/src/: main_estimator.cpp
cpi_compare/src/cpi/: CpiBase.h  CpiV1.h  CpiV2.h
cpi_compare/src/gtsam/: ImuFactorCPIv1.cpp  ImuFactorCPIv1.h  ImuFactorCPIv2.cpp  ImuFactorCPIv2.h  InvAnchorFactor.cpp  InvAnchorFactor.h  InvUVFactor.cpp  InvUVFactor.h  JPLImageUVFactor.cpp  JPLImageUVFactor.h  JPLNavState.cpp  JPLNavState.h  JPLNavStatePrior.cpp  JPLNavStatePrior.h
cpi_compare/src/sim/: SimParser.h  SimulationLoader.cpp  SimulationLoader.h
cpi_compare/src/solvers/: FeatureInitializer.cpp  FeatureInitializer.h  GraphSolver.cpp  GraphSolver.h  GraphSolver_FEAT.cpp  GraphSolver_IMU.cpp
cpi_compare/src/utils/: Config.h  feature.h  quat_ops.h
cpi_results/: .gitignore  ReadMe.md  sim_error_average.m  sim_pos_average.m
cpi_results/functions/: flipquatorder.m  getstringvalue.m  load_data.m  quat_inv.m  quat_mul.m
cpi_results/functions/dist_colors/: license.txt
cpi_simulation/: CameraObs.m  CameraObstereo.m  ReadMe.md  SCRIPT_gazebo_to_sim.m  SCRIPT_gen_map.m  monte_carlo_gazebo.m
cpi_simulation/data_gazebo/: 100hz_circle-firefly-ground_truth-imu.csv  100hz_circle-firefly-ground_truth-pose_with_covariance.csv  200hz_circle-firefly-ground_truth-imu.csv  200hz_circle-firefly-ground_truth-pose_with_covariance.csv
cpi_simulation/data_maps/: map_01.mat  map_02.mat
cpi_simulation/robotics3D/: IMU_prop4.m  Omega_calculation.m  aa2quat.m  aa2rot.m  cayley2rot.m  cayley2rotbar.m  computeInverseDistortion.m  fprintf_r.m  g_vector_ECEF.m  latlonalt2ECEF.m  neg_cross_product.m  normalizedToDistorted.m  normalizedToPixel.m  para_Omega_calculation.m  pixelToNormalized.m  plotarrow.m  plotframe.m  quat2aa.m  quat2rot.m  quat_inv.m  quat_mul.m  quat_vec_mul.m  rot2aa.m  rot2quat.m  rot2rpy.m  rotx.m  roty.m  rotz.m  skewsymm.m
