<?xml version="1.0"?>
<package>
    <!-- Package Information -->
    <name>cpi_comm</name>
    <version>0.0.0</version>
    <description>
        Communication messages
    </description>

    <!-- Code Authors -->
    <author email="keck@udel.edu">Kevin Eckenhoff</author>
    <author email="pgeneva@udel.edu">Patrick Geneva</author>
    <maintainer email="keck@udel.edu">Kevin Eckenhoff</maintainer>
    <maintainer email="pgeneva@udel.edu">Patrick Geneva</maintainer>

    <!-- Licensing -->
    <license>MIT</license>

    <!-- Dependencies which this package needs to build itself. -->
    <buildtool_depend>catkin</buildtool_depend>

    <!-- Dependencies needed to compile this package. -->
    <build_depend>cmake_modules</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>std_msgs</build_depend>

    <!-- Dependencies needed after this package is compiled. -->
    <run_depend>roscpp</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>std_msgs</run_depend>

</package>
